@@ -1,3 +1,5 @@
+- Fix: Better handling of execution courses attends merge
+
 30.4.1 (21-05-2020)
 - Improvement: Improved PermissionService
 - Fix: Remove restriction for unique attends in an execution coruse within all registrations of a student
